[tool.poetry]
name = "test_plotly"
version = "0.1.0"
description = ""
authors = ["elda27 <kaz.birdstick@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
plotly = "^5.6.0"
numpy = "^1.22.2"
dash = "^2.2.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
